--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "gatsby-plugin-postcss": "^6.14.0",
     "postcss": "^8.5.3",
     "react": "^18.2.0",
+    "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
     "react-icons": "^5.5.0",
     "tailwindcss": "^4.0.9"
